--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arsenal:ital,wght@0,400;0,700;1,400;1,700&family=Italiana&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <div class = "container">
         <header>
             <div>
-                <img class="hero" src="images/border.jpg" alt="banner">
+                <img class="hero" src="border.jpg" alt="banner">
             </div>
             <div class="title">
                 <h1>Coffee Club</h1>
@@ -35,9 +35,9 @@
             <img src="images/borderplaceholder.jpg" alt="main image placeholder">
             <!--the slideshow isn't working no matter what I paste<div class="slideshow">
             <div class="cycle-slideshow" data-cycle-fx="scrollHorz" data-cycle-pause-on-hover="true" data-cycle-speed="200">
-                <div class="homepage-carousel-item"><img alt="" src="images/coffee1.jpg"></div>
-                <div class="homepage-carousel-item"><img alt="" src="images/coffee2.jpg"></div>
-                <div class="homepage-carousel-item"><img alt="" src="images/coffee3.jpg"></div>
+                <div class="homepage-carousel-item"><img alt="" src="coffee1.jpg"></div>
+                <div class="homepage-carousel-item"><img alt="" src="coffee2.jpg"></div>
+                <div class="homepage-carousel-item"><img alt="" src="coffee3.jpg"></div>
             </div></div>-->
             <h3>Mission</h3>
            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi doloribus ad dolor, amet eos quae voluptatum laboriosam nisi blanditiis tempora culpa voluptatibus tenetur veritatis. Officia vitae quam quibusdam blanditiis illum?</p>
@@ -45,17 +45,17 @@
 
         <aside><!--work on css to make headers & p to be next to image-->
           <div class="top">
-            <img src="images/coffee1.jpg" alt="picture of homemade latte art"><!--need to find better oriented images-->
+            <img src="coffee1.jpg" alt="picture of homemade latte art"><!--need to find better oriented images-->
             <h3>Section 1</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>  
           <div class="middle">
-            <img src="images/coffee2.jpg" alt="picture of Turkish coffee">
+            <img src="coffee2.jpg" alt="picture of Turkish coffee">
             <h3>Section 2</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
           <div class="bottom">
-            <img src="images/coffee3.jpg" alt="picture of homemade dalgona coffee">
+            <img src="coffee3.jpg" alt="picture of homemade dalgona coffee">
             <h3>Section 3</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </div>
@@ -70,7 +70,7 @@
         </ul>
     </footer>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-    <script src="https://malsup.github.io/jquery.cycle2.js"></script>
+    <script src="https://malsup.github.io/jquery.cycle2.js"></script><!--this part isn't working-->
 </body>
 
 </html>
