--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </ul>
         </nav>
         <main>
-            <img src="images/borderplaceholder.jpg" alt="main image placeholder">
+            <img src="borderplaceholder.jpg" alt="main image placeholder">
             <!--the slideshow isn't working no matter what I paste<div class="slideshow">
             <div class="cycle-slideshow" data-cycle-fx="scrollHorz" data-cycle-pause-on-hover="true" data-cycle-speed="200">
                 <div class="homepage-carousel-item"><img alt="" src="coffee1.jpg"></div>
